# agcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  config.example.toml  flake.nix
.github/workflows/: apt.yml  aur.yml  ci.yml  homebrew.yml  release.yml  rpm.yml
aur/: PKGBUILD
docs/: index.html  input.css  style.css
src/: AGENTS.md  cache.rs  colors.rs  config.rs  error.rs  main.rs  models.rs  server.rs  setup.rs  stats.rs
src/auth/: accounts.rs  mod.rs  oauth.rs  token.rs
src/cloudcode/: AGENTS.md  client.rs  discover.rs  mod.rs  quota.rs  rate_limit.rs  request.rs  response.rs  sse.rs
src/format/: AGENTS.md  anthropic.rs  google.rs  mod.rs  openai.rs  openai_convert.rs  responses.rs  responses_convert.rs  signature_cache.rs  to_anthropic.rs  to_google.rs
src/tui/: AGENTS.md  app.rs  config_editor.rs  data.rs  effects.rs  log_reader.rs  mod.rs  theme.rs
src/tui/views/: about.rs  accounts.rs  config.rs  logs.rs  mappings.rs  mod.rs  overview.rs  quota.rs  usage.rs
src/tui/widgets/: account_panel.rs  donut_chart.rs  footer.rs  header.rs  help.rs  mod.rs  runtime_warning.rs  startup_warnings.rs  stats_panel.rs  status_panel.rs  tabs.rs
